--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/jamplify/nerm",
   "devDependencies": {
+    "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "mocha": "^2.2.5",
     "mongo-fixtures": "^1.0.1",
@@ -44,6 +45,7 @@
     "unused": true
   },
   "dependencies": {
+    "async": "^1.3.0",
     "inflection": "^1.7.1",
     "lodash": "^3.10.0",
     "underscore.string": "^3.1.1"
