--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "async": "^1.3.0",
+    "flat": "^1.6.0",
     "inflection": "^1.7.1",
     "lodash": "^3.10.0",
     "underscore.string": "^3.1.1"
